# Computer-volume-adjuster

./: CMakeLists.txt  CMakeUserPresets.json  README.md  main.cpp  style.qrc  widget.cpp  widget.h  widget.ui
